@@ -1,6 +1,6 @@
 Package: marked
-Version: 1.2.8
-Date: 2023-10-13
+Version: 1.2.9
+Date: 2024-02-08
 Title: Mark-Recapture Analysis for Survival and Abundance Estimation
 Author: Jeff Laake <jefflaake@gmail.com>, Devin Johnson
     <devin.johnson@noaa.gov>, Paul Conn <paul.conn@noaa.gov>, example for simHMM
@@ -43,5 +43,5 @@ SystemRequirements: ADMB version 11 <http://admb-project.org/> for
 LazyLoad: yes
 VignetteBuilder: knitr
 License: GPL (>=2)
-RoxygenNote: 7.2.3
+RoxygenNote: 7.3.1
 Encoding: UTF-8
